--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#157878">
-    <link rel="stylesheet" href="/tnt-home/assets/css/style.css?v=2a6b23cfd6fe6c9a08e7792b82abfb375acc9af7">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <section class="page-header">
