--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <p><img src="https://raw.githubusercontent.com/foolo/tnt/master/Screenshot_2019-07-24_14-52-12.png" alt="screenshot 1" /></p>
 
 <h2 id="limitations">Limitations</h2>
-<p>Searching and filtering not yet implemented. Few document formats are supported. No translation memory tool or terminology manager. No dictionary integration.</p>
+<p>Only ODT and DOCX are currently supported for importing/exporting. No translation memory tool or terminology manager.</p>
 
 <h2 id="supported-file-formats">Supported file formats</h2>
 <ul>
