--- a/index.html
+++ b/index.html
@@ -63,9 +63,14 @@
 <p>Only ODT and DOCX are currently supported for importing/exporting. No translation memory tool or terminology manager.</p>
 
 <h2 id="supported-file-formats">Supported file formats</h2>
+<p>Import/export:</p>
 <ul>
   <li>ODT</li>
   <li>DOCX</li>
+</ul>
+
+<p>Editing:</p>
+<ul>
   <li>XLIFF 2.0</li>
 </ul>
 
