--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 </ul>
 
 <h2 id="screenshots">Screenshots</h2>
-<p><img src="https://raw.githubusercontent.com/foolo/tnt/master/Screenshot_2019-07-24_14-52-12.png" alt="screenshot 1" /></p>
+<p><img src="Screenshot_2019-07-24_14-52-12.png" alt="screenshot 1" /></p>
 
 <h2 id="limitations">Limitations</h2>
 <p>Only ODT and DOCX are currently supported for importing/exporting. No translation memory tool or terminology manager.</p>
