--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@ chmod +x tnt-0.1-linux-x64.AppImage
 
 <h2 id="old-releases">Old releases</h2>
 
-<p>All releases are located at https://github.com/foolo/tnt/releases</p>
+<p>All releases are located at <a href="https://github.com/foolo/tnt/releases">https://github.com/foolo/tnt/releases</a></p>
 
 <h2 id="development">Development</h2>
 
-<p>The source code is located at https://github.com/foolo/tnt</p>
+<p>The source code is located at <a href="https://github.com/foolo/tnt">https://github.com/foolo/tnt</a></p>
 
 </section>
     
