--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
 <body>
 
 <section class="page-header">
-<h1 class="project-name">tnt-home</h1>
-<h2 class="project-tagline">source code of the website for tnt</h2>
-<a href="https://github.com/foolo/tnt-home" class="btn">View on GitHub</a>
+<h1 class="project-name">tnt</h1>
+<h2 class="project-tagline">an open source computer-assisted translation tool</h2>
 </section>
 
 <section class="main-content">
