--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html lang="en-US">
 <head>
 	<meta charset="UTF-8">
+	<title>tnt - open-souce CAT tool with XLIFF 2.0 support</title>
+	<meta name="description" content="open-souce CAT tool with XLIFF 2.0 support" />
+	<link rel="canonical" href="https://foolo.github.io/tnt-home/" />
+
+	<meta property="og:title" content="tnt - open-souce CAT tool with XLIFF 2.0 support" />
+	<meta property="og:locale" content="en_US" />
+	<meta property="og:description" content="tnt open-source CAT tool helps you with translation of docx, odt and other file types" />
+	<meta property="og:url" content="https://foolo.github.io/tnt-home/" />
+
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="theme-color" content="#157878">
 	<link rel="stylesheet" href="style.css">
