--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en-US">
 <head>
 	<meta charset="UTF-8">
-	<title>tnt - open-souce CAT tool with XLIFF 2.0 support</title>
+	<title>TNT - open-souce CAT tool with XLIFF 2.0 support</title>
 	<meta name="description" content="open-souce CAT tool with XLIFF 2.0 support" />
 	<link rel="canonical" href="https://foolo.github.io/tnt-home/" />
 
-	<meta property="og:title" content="tnt - open-souce CAT tool with XLIFF 2.0 support" />
+	<meta property="og:title" content="TNT - open-souce CAT tool with XLIFF 2.0 support" />
 	<meta property="og:locale" content="en_US" />
-	<meta property="og:description" content="tnt open-source CAT tool helps you with translation of docx, odt and other file types" />
+	<meta property="og:description" content="TNT open-source CAT tool helps you with translation of docx, odt and other file types" />
 	<meta property="og:url" content="https://foolo.github.io/tnt-home/" />
 
 	<link rel="stylesheet" href="style.css">
@@ -17,7 +17,7 @@
 <body>
 
 <section class="page-header">
-<h1 class="project-name">tnt</h1>
+<h1 class="project-name">TNT</h1>
 <h2 class="project-tagline">an open source computer-assisted translation tool</h2>
 </section>
 
@@ -25,7 +25,7 @@
 
 <h2 id="what-is-tnt">What is TNT?</h2>
 
-<p>TNT is a basic open source computer-assisted translation tool. The application is still at beta stage, although it can already be used for translating documents, but with limited features.</p>
+<p>TNT is a basic open source computer-assisted translation tool.</p>
 
 <table>
 	<tbody>
